crates/analyzer/tests/snapshots/errors__private_struct_field.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: Can not access private field `id` on struct `Bar`
  ┌─ compile_errors/private_struct_field.fe:8:14
  │
8 │     self.val.id
  │              ^^ private field


